--- a/templates/index.html
+++ b/templates/index.html
@@ -44,6 +44,13 @@
 
     <h1>Sentiment Analyzer API!</h1>
 
+    <!-- form -->
+    <form action="#" method="post" class='mx-4'>
+      <p>Text:</p>
+      <p><input type="text" name="text" /></p>
+      <p><input type="submit" value="submit" /></p>
+    </form>
+
 
     <!-- Option 2: Separate Popper and Bootstrap JS
     
